--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -35,21 +35,21 @@
         <TextBlock Grid.Column="1" HorizontalAlignment="Left" Height="20" Margin="10,61,0,0" Grid.Row="1"
                    TextWrapping="Wrap" VerticalAlignment="Top" Width="128" FontFamily="Century Gothic" FontSize="16"
                    Text="Дата начала" Foreground="White" />
-        <TextBox Grid.Column="1" HorizontalAlignment="Left" Height="25" Margin="148,60,0,0" Grid.Row="1"
+        <TextBox x:Name="DateBegin" Grid.Column="1" HorizontalAlignment="Left" Height="25" Margin="148,60,0,0" Grid.Row="1"
                  TextWrapping="Wrap" Text="00.00.0000" VerticalAlignment="Top" Width="119" Background="#FFE6E6E6"
                  BorderBrush="#FFDDDDDD" FontFamily="Century Gothic" Padding="1,2,1,1" BorderThickness="0,0,0,0"
                  TextAlignment="Center" Foreground="#FF003981" FontSize="16" />
         <TextBlock Grid.Column="1" HorizontalAlignment="Left" Height="37" Margin="10,86,0,0" Grid.Row="1"
                    TextWrapping="Wrap" VerticalAlignment="Top" Width="133" FontFamily="Century Gothic" FontSize="16"
                    Text="Дата окончания" Foreground="White" />
-        <TextBox Grid.Column="1" HorizontalAlignment="Left" Height="24" Margin="148,91,0,0" Grid.Row="1"
+        <TextBox x:Name="DateEnd" Grid.Column="1" HorizontalAlignment="Left" Height="24" Margin="148,91,0,0" Grid.Row="1"
                  TextWrapping="Wrap" Text="00.00.0000" VerticalAlignment="Top" Width="119" Background="#FFE6E6E6"
                  BorderBrush="#FFDDDDDD" FontFamily="Century Gothic" Padding="1,2,1,1" BorderThickness="0,0,0,0"
                  TextAlignment="Center" Foreground="#FF003981" FontSize="16" />
         <TextBlock Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="10,179,0,0" Grid.Row="1"
                    TextWrapping="Wrap" VerticalAlignment="Top" Width="114" FontFamily="Century Gothic" FontSize="14"
                    Text="Тип топлива" Foreground="White" />
-        <ComboBox ItemsSource="{Binding FuelTypes}" Grid.Column="1" HorizontalAlignment="Left" Height="23"
+        <ComboBox x:Name="FuelCb" ItemsSource="{Binding FuelTypes}" Grid.Column="1" HorizontalAlignment="Left" Height="23"
                   Margin="129,179,0,0" Grid.Row="1" VerticalAlignment="Top" Width="189" BorderThickness="0,0,0,0"
                   Background="#FFE6E6E6" Foreground="#FF003981" Padding="9,3,5,3" />
         <TextBlock Grid.Column="1" HorizontalAlignment="Left" Height="43" Margin="10,234,0,0" Grid.Row="1"
@@ -61,14 +61,20 @@
         <TextBlock Grid.Column="1" HorizontalAlignment="Left" Height="42" Margin="10,319,0,0" Grid.Row="1"
                    TextWrapping="Wrap" VerticalAlignment="Top" Width="114" FontFamily="Century Gothic"
                    Text="Текущая прибыль" Foreground="White" FontSize="14" />
-        <TextBox Grid.Column="1" HorizontalAlignment="Left" Height="26" Margin="129,327,0,0" Grid.Row="1"
+        <TextBox IsReadOnly="True" x:Name="ProfitTb" Grid.Column="1" HorizontalAlignment="Left" Height="26" Margin="129,327,0,0" Grid.Row="1"
                  TextWrapping="Wrap" VerticalAlignment="Top" Width="94" Background="#FFE6E6E6" BorderBrush="#FFDDDDDD"
                  FontFamily="Century Gothic" Padding="7,5,1,1" BorderThickness="0,0,0,0" Foreground="#FF003981"
                  Text="0" />
         <ListBox ItemsSource="{Binding Cities}" Grid.Column="1" HorizontalAlignment="Left" Height="194" Margin="405,28,0,0" Grid.Row="1"
                    VerticalAlignment="Top" Width="181" Background="#FFE6E6E6" Padding="6,2,2,2" />
-        <ListBox ItemsSource="{Binding Members}" Grid.Column="1" HorizontalAlignment="Left" Height="186" Margin="405,284,0,0" Grid.Row="1"
-                   VerticalAlignment="Top" Width="181" Background="#FFE6E6E6" Padding="6,2,2,2" />
+        <ListBox x:Name="MemberListBox" ItemsSource="{Binding Members}" Grid.Column="1" HorizontalAlignment="Left" Height="186" Margin="405,284,0,0" Grid.Row="1"
+                   VerticalAlignment="Top" Width="181" Background="#FFE6E6E6" Padding="6,2,2,2" >
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <Label Content="{Binding Name}"/>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
         <TextBlock Grid.Column="1" HorizontalAlignment="Left" Height="20" Margin="420,3,0,0" Grid.Row="1"
                    TextWrapping="Wrap" VerticalAlignment="Top" Width="150" FontFamily="Century Gothic" FontSize="14"
                    Text="Города путешествий" Foreground="White" />
@@ -84,10 +90,10 @@
         <Button Grid.Column="1" Content="новый" HorizontalAlignment="Left" Height="20" Margin="415,475,0,0"
                 Grid.Row="1" VerticalAlignment="Top" Width="46" Foreground="White" Background="#FF06D4E2"
                 BorderThickness="0,0,0,0" FontSize="10" Click="CreateMember_Click"/>
-        <Button Grid.Column="1" Content="из списка" HorizontalAlignment="Left" Height="20" Margin="524,475,0,0"
+        <Button Click="SelectMember_OnClick" Grid.Column="1" Content="из списка" HorizontalAlignment="Left" Height="20" Margin="524,475,0,0"
                 Grid.Row="1" VerticalAlignment="Top" Width="57" Background="#FF06D6E3" Foreground="White"
                 BorderThickness="0,0,0,0" FontSize="10" />
-        <ListBox ItemsSource="{Binding Foods}" Grid.Column="1" HorizontalAlignment="Left" Height="195" Margin="627,28,0,0" Grid.Row="1"
+        <ListBox x:Name="FoodListBox" ItemsSource="{Binding Foods}" Grid.Column="1" HorizontalAlignment="Left" Height="195" Margin="627,28,0,0" Grid.Row="1"
                     VerticalAlignment="Top" Width="178" Background="#FFE6E6E6" Padding="6,2,2,2" />
         <TextBlock Grid.Column="1" HorizontalAlignment="Left" Height="20" Margin="638,3,0,0" Grid.Row="1"
                    TextWrapping="Wrap" VerticalAlignment="Top" Width="150" FontFamily="Century Gothic" FontSize="14"
@@ -95,18 +101,18 @@
         <Button Grid.Column="1" Content="добавить" Height="21" Margin="682,228,0,0" Grid.Row="1"
                 VerticalAlignment="Top" Foreground="White" Background="#FF06D4E2" BorderThickness="0,0,0,0"
                 FontSize="10" HorizontalAlignment="Left" Width="62" />
-        <TextBox Grid.Column="1" HorizontalAlignment="Left" Height="26" Margin="129,285,0,0" Grid.Row="1"
+        <TextBox  x:Name="TicketCostTb" IsReadOnly="True" Grid.Column="1" HorizontalAlignment="Left" Height="26" Margin="129,285,0,0" Grid.Row="1"
                  TextWrapping="Wrap" VerticalAlignment="Top" Width="94" Background="#FFE6E6E6" BorderBrush="#FFDDDDDD"
                  FontFamily="Century Gothic" Padding="7,5,1,1" BorderThickness="0,0,0,0" Foreground="#FF003981"
                  Text="0" />
-        <TextBox Grid.Column="1" HorizontalAlignment="Left" Height="26" Margin="129,243,0,0" Grid.Row="1"
+        <TextBox x:Name="TravelCostTb" IsReadOnly="True" Grid.Column="1" HorizontalAlignment="Left" Height="26" Margin="129,243,0,0" Grid.Row="1"
                  TextWrapping="Wrap" VerticalAlignment="Top" Width="94" Background="#FFE6E6E6" BorderBrush="#FFDDDDDD"
                  FontFamily="Century Gothic" Padding="7,5,1,1" BorderThickness="0,0,0,0" Foreground="#FF003981"
                  Text="0" />
         <TextBlock Grid.Column="1" HorizontalAlignment="Left" Height="42" Margin="10,364,0,0" Grid.Row="1"
                    TextWrapping="Wrap" VerticalAlignment="Top" Width="114" FontFamily="Century Gothic"
                    Text="Процент окупаемости" Foreground="White" FontSize="14" />
-        <TextBox Grid.Column="1" HorizontalAlignment="Left" Height="26" Margin="129,372,0,0" Grid.Row="1"
+        <TextBox x:Name="PercentTb" Grid.Column="1" HorizontalAlignment="Left" Height="26" Margin="129,372,0,0" Grid.Row="1"
                  TextWrapping="Wrap" VerticalAlignment="Top" Width="94" Background="#FFE6E6E6" BorderBrush="#FFDDDDDD"
                  FontFamily="Century Gothic" Padding="5,5,1,1" BorderThickness="0,0,0,0" Foreground="#FF003981"
                  Text="0" TextAlignment="Center" />
