--- a/Windows/CreateMember.xaml
+++ b/Windows/CreateMember.xaml
@@ -27,7 +27,7 @@
                 <TextBlock Height="30" 
                    TextWrapping="Wrap" Width="100" FontFamily="Century Gothic" FontSize="14"
                    Text="Имя" Foreground="White" TextAlignment="Left"/>
-                <TextBox Height="30" 
+                <TextBox Height="30"  x:Name="NameTb"
                  TextWrapping="Wrap" Width="200" Background="#FFE6E6E6" BorderBrush="#FFDDDDDD"
                  FontFamily="Century Gothic" Padding="7,5,1,1" BorderThickness="0,0,0,0" Foreground="#FF003981"/>
             </StackPanel>
@@ -35,7 +35,7 @@
                 <TextBlock Height="30" 
                    TextWrapping="Wrap" Width="100" FontFamily="Century Gothic" FontSize="14"
                    Text="Возраст" Foreground="White" TextAlignment="Left"/>
-                <TextBox Height="30" 
+                <TextBox Height="30" x:Name="AgeTb"
                  TextWrapping="Wrap" Width="200" Background="#FFE6E6E6" BorderBrush="#FFDDDDDD"
                  FontFamily="Century Gothic" Padding="7,5,1,1" BorderThickness="0,0,0,0" Foreground="#FF003981"/>
             </StackPanel>
@@ -43,7 +43,7 @@
                 <TextBlock Height="30" 
                    TextWrapping="Wrap" Width="100" FontFamily="Century Gothic" FontSize="14"
                    Text="Пол" Foreground="White" TextAlignment="Left"/>
-                <TextBox Height="30" 
+                <TextBox Height="30"  x:Name="GenderTb"
                  TextWrapping="Wrap" Width="200" Background="#FFE6E6E6" BorderBrush="#FFDDDDDD"
                  FontFamily="Century Gothic" Padding="7,5,1,1" BorderThickness="0,0,0,0" Foreground="#FF003981"/>
             </StackPanel>
@@ -51,7 +51,7 @@
                 <TextBlock Height="30" 
                    TextWrapping="Wrap" Width="100" FontFamily="Century Gothic" FontSize="14"
                    Text="Роль" Foreground="White" TextAlignment="Left"/>
-                <ComboBox ItemsSource="{Binding Roles}" Height="30" 
+                <ComboBox ItemsSource="{Binding Roles}" Height="30" x:Name="RoleCb"
                  Width="200" Background="#FFE6E6E6" BorderBrush="#FFDDDDDD"
                  FontFamily="Century Gothic" Padding="7,5,1,1" BorderThickness="0,0,0,0" Foreground="#FF003981"/>
             </StackPanel>
