--- a/Windows/ChooseCity.xaml
+++ b/Windows/ChooseCity.xaml
@@ -1,12 +1,11 @@
-﻿<Window x:Class="TripAdvisor.ChooseShip"
+﻿<Window x:Class="TripAdvisor.Windows.ChooseCity"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:local="clr-namespace:TripAdvisor"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:local="clr-namespace:TripAdvisor.Windows"
         mc:Ignorable="d"
-        Title="ChooseShip" Height="600" Width="800" ScrollViewer.VerticalScrollBarVisibility="Visible">
-    
+        Title="ChooseCity" Height="800" Width="800">
     <Grid>
         <Grid.Background>
             <ImageBrush ImageSource="/1612758370_122-p-goluboi-fon-odnotonnii-gradient-147.jpg" />
@@ -23,7 +22,7 @@
             <ColumnDefinition Width="29*" />
         </Grid.ColumnDefinitions>
         <StackPanel Grid.Row="1" Grid.Column="1">
-            <DataGrid x:Name="ShipsDg" Margin="0,10,0,0" ItemsSource="{Binding Ships}" AutoGenerateColumns="False" BorderThickness="0" ScrollViewer.VerticalScrollBarVisibility="Visible" Height="450">
+            <DataGrid x:Name="CitiesDg" Margin="0,10,0,0" ItemsSource="{Binding Cities}" AutoGenerateColumns="False" BorderThickness="0" ScrollViewer.VerticalScrollBarVisibility="Visible" Height="450">
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="Имя"  Binding="{Binding Path=Name}"></DataGridTextColumn>
                     <DataGridTemplateColumn Header="Image" Width="SizeToCells" IsReadOnly="True">
@@ -33,15 +32,12 @@
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
                     </DataGridTemplateColumn>
-                    <DataGridTextColumn Header="Вместимость"  Binding="{Binding Path=Capacity}"></DataGridTextColumn>
-                    <DataGridTextColumn Header="Количесьтво членов экипажа"  Binding="{Binding Path=CrewMembersCount}"></DataGridTextColumn>
-                    <DataGridTextColumn Header="Вместимость бака"  Binding="{Binding Path=FuelTankCapacity}"></DataGridTextColumn>
                 </DataGrid.Columns>
             </DataGrid>
             <Button Grid.Column="1" Content="Выбрать" HorizontalAlignment="Center" Height="30" 
                 Grid.Row="1" VerticalAlignment="Top" Width="100" FontFamily="Century Gothic" BorderBrush="#FFD9FFA4"
                 BorderThickness="0,0,0,0" Background="#FF00C0CA" Foreground="White" FontSize="14"
-                Click="Ok_OnClick"/>
+                Click="SelectCity_OnClick"/>
         </StackPanel>
     </Grid>
 </Window>
