--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -117,6 +117,7 @@
                  FontFamily="Century Gothic" Padding="5,5,1,1" BorderThickness="0,0,0,0" Foreground="#FF003981"
                  Text="0" TextAlignment="Center" TextChanged="PercentTb_OnTextChanged" />
         <Button Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left" Height="50" Margin="100,350,0,0" Content="Save" Click="Button_Click_1"/>
+        <Button Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left" Height="50" Margin="150,350,0,0" Content="New" Click="ButtonBase_OnClick"/>
         <TextBlock Grid.Column="1" HorizontalAlignment="Left" Height="27" Margin="228,372,0,0" Grid.Row="1"
                    TextWrapping="Wrap" VerticalAlignment="Top" Width="19" FontFamily="Century Gothic" Text="%"
                    Foreground="White" FontSize="20" />
