--- a/Windows/ChooseShip.xaml
+++ b/Windows/ChooseShip.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="TripAdvisor.ChooseShip"
+﻿<Window x:Class="TripAdvisor.Windows.ChooseShip"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -41,7 +41,7 @@
             <Button Grid.Column="1" Content="Выбрать" HorizontalAlignment="Center" Height="30" 
                 Grid.Row="1" VerticalAlignment="Top" Width="100" FontFamily="Century Gothic" BorderBrush="#FFD9FFA4"
                 BorderThickness="0,0,0,0" Background="#FF00C0CA" Foreground="White" FontSize="14"
-                Click="Ok_OnClick"/>
+                Click="SelectButton_OnClick"/>
         </StackPanel>
     </Grid>
 </Window>
